--- a/transferSuccessful.html
+++ b/transferSuccessful.html
@@ -86,6 +86,9 @@
                 text-decoration: none;
             }
     </style> <br> <br>
+    <center>
+        
+    
     <div class="up">
         <img src="./transferSuccessful_files/smallcheck.png" alt="">
         <p>Payment Success!</p>
@@ -96,7 +99,7 @@
     <div class="box"> <br>  
         <div class="small">
             <h3>Payment Details</h3>
-        </div> <br> <br>
+        </div> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
 
         <p>Ref Number <span id="randomString">76151845</span></p> <br>
         <p>Payment Time <span id="datetime">August 13, 2024 9:42 AM</span></p> <br>
@@ -132,4 +135,4 @@
 <!-- /Chatra {/literal} -->
 
 <!-- Mirrored from allappsreveiws.com.ng/palmpay/next-page.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 27 Sep 2023 21:11:59 GMT -->
-</div></body></html>
+</div></center></body></html>
