--- a/transferSuccessful.html
+++ b/transferSuccessful.html
@@ -98,13 +98,13 @@
             <h3>Payment Details</h3>
         </div> <br> <br>
 
-        <p>Ref Number <span id="randomString">76151845</span></p> <br>
-        <p>Payment Time <span id="datetime">August 13, 2024 9:42 AM</span></p> <br>
-        <p>Account Name <span style="text-transform: uppercase;" id="palmpayNameDisplay"> 23</span></p> <br>
-        <p>Account Number <span id="palmpayNumberDisplay"> 23</span></p> <br>
-        <p>Bank Name <span style="text-transform: uppercase;" id="palmpayComeDisplay"> 23</span></p> <br>
-        <p>From <span>Cash Tube</span></p> <br>
-        <p>Payment status <span>Success</span></p> <br>
+        <h4>Ref Number <span id="randomString">76151845</span></h4> <br>
+        <h4>Payment Time <span id="datetime">August 13, 2024 9:42 AM</span></h4> <br>
+        <h4>Account Name <span style="text-transform: uppercase;" id="palmpayNameDisplay"> 23</span></h4> <br>
+        <h4>Account Number <span id="palmpayNumberDisplay"> 23</span></h4> <br>
+        <h4>Bank Name <span style="text-transform: uppercase;" id="palmpayComeDisplay"> 23</span></h4> <br>
+        <h4>From <span>Cash Tube</span></h4> <br>
+        <h4>Payment status <span>Success</span></h4> <br>
       </div> <br> <br> <br> <br>
       <div class="footer">
         <button><a href="home.html">Back to Home</a></button>
