--- a/payment2.html
+++ b/payment2.html
@@ -360,17 +360,17 @@
         <br>
 
         <p>Account Number</p>
-        <h3 id="accountNumberToCopy">6103154535</h3>
+        <h3 id="accountNumberToCopy">1002263865</h3>
         <button class="copy-button" onclick="copyText(&#39;accountNumberToCopy&#39;)">Copy</button>
         <br>
 
         <p>Bank Name</p>
-        <h3>OPAY</h3> <br>
+        <h3>SPARKLE BANK</h3> <br>
 
         
 
         <p>Account Name</p>
-        <h3>GODWIN WILLIAMS FRIDAY</h3> <br> <hr> <br>
+        <h3>PRINCE OKANEZI</h3> <br> <hr> <br>
         <p>Pay to this specific account and get your access code </p> <br>
         <div class="btn">
             <button id="transferButton" onclick="startTransfer()">I have made this bank Transfer</button> <br>
